# anima

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  README.zh-TW.md  docker-compose.yml  mcp-config.example.json  pyproject.toml  zeabur.json
personas/: alex.json  casual.json  default.json
scripts/: migrate_qdrant.py  migrate_qdrant_curl.sh
src/: __init__.py  main.py  webapp.py
src/adapters/: __init__.py  protocol.py  threads.py
src/agent/: __init__.py  brain.py  persona.py  scheduler.py
src/mcp/: __init__.py  __main__.py  server.py
src/mcp/tools/: __init__.py
src/memory/: __init__.py  mem0_adapter.py  reflection.py
src/observation/: __init__.py  analyzer.py  logger.py  models.py  report.py  review.py
src/threads/: __init__.py  apify_provider.py  client.py  mock_client.py  models.py  providers.py  toolkit_provider.py
src/utils/: __init__.py  config.py  harvest_ideas.py  ideas.py  ingestion.py
src/webhooks/: __init__.py  apify_webhook.py  server.py
tests/: __init__.py  test_brain_external_posts.py  test_mcp_identity.py  test_persona.py  test_persona_edge_cases.py  test_threads_client.py  test_webhook_handler.py
